added hw and updated website

--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@ img {
 <td align="left">Data Import/Output</td>
 </tr>
 <tr class="even">
+<td align="left">2</td>
+<td align="left">2016-01-05</td>
+<td align="left">Homework 2</td>
+<td align="left"><a href="HW/homework2.R">HW</a></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
 <td align="left">—</td>
 <td align="left">—</td>
 <td align="left">—</td>
@@ -140,7 +147,7 @@ img {
 </tr>
 </tbody>
 </table>
-<!-- | 2  | 2016-06-16  | HW2  | [code](hw/Homework2.R)  |   |
+<!-- 
 | 2  | 2016-06-16  | Module 4  | [lecSlides](modules/module4.html), [lecNotes](modules/module4.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module4.R), [lab](labs/module4_lab.R), [key](labs/module4_lab_review.html)  | Data Input  |
 | 2  | 2016-06-16  | Module 5  | [lecSlides](modules/module5.html), [lecNotes](modules/module5.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module5.R), [lab](labs/module5_lab.txt)  | Data I/O + Subset |
 | 2  | 2016-06-16  | Module 6  | [lecSlides](modules/module6.html), [lecNotes](modules/module6.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module6.R), [lab](labs/module6_lab.R), [key](labs/module6_lab_key.R) | Manipulation |
@@ -164,7 +171,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-04 09:36:03 Eastern Time.</p>
+<p>This page was last updated on 2016-01-04 20:34:44 Eastern Time.</p>
 </div>
 </div>
 
