--- a/index.html
+++ b/index.html
@@ -139,6 +139,27 @@ img {
 <td align="left"></td>
 </tr>
 <tr class="odd">
+<td align="left">2</td>
+<td align="left">2016-01-05</td>
+<td align="left">Module 5</td>
+<td align="left"><a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html">HTML</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf">PDF</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R%20_Lab.R">Lab</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R">Code</a></td>
+<td align="left">Subsetting Data</td>
+</tr>
+<tr class="even">
+<td align="left">2</td>
+<td align="left">2016-01-05</td>
+<td align="left">Module 6</td>
+<td align="left"><a href="Data_Summarization/lecture/Data_Summarization.html">HTML</a>, <a href="Data_Summarization/lecture/Data_Summarization.pdf">PDF</a>, <a href="Data_Summarization/lab/Data_Summarization_Lab.R">Lab</a>, <a href="Data_Summarization/lecture/Data_Summarization.R">Code</a></td>
+<td align="left">Data Summarization</td>
+</tr>
+<tr class="odd">
+<td align="left">2</td>
+<td align="left">2016-01-05</td>
+<td align="left">Module 7</td>
+<td align="left"><a href="Knitr/lecture/Knitr.html">HTML</a>, <a href="Knitr/lecture/Knitr.pdf">PDF</a>, <a href="Knitr/lab/illusion.Rmd">Lab</a>, <a href="Knitr/lecture/Knitr.Rmd">Code</a></td>
+<td align="left">Reproducible Research</td>
+</tr>
+<tr class="even">
 <td align="left">—</td>
 <td align="left">—</td>
 <td align="left">—</td>
@@ -148,9 +169,6 @@ img {
 </tbody>
 </table>
 <!-- 
-| 2  | 2016-06-16  | Module 4  | [lecSlides](modules/module4.html), [lecNotes](modules/module4.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module4.R), [lab](labs/module4_lab.R), [key](labs/module4_lab_review.html)  | Data Input  |
-| 2  | 2016-06-16  | Module 5  | [lecSlides](modules/module5.html), [lecNotes](modules/module5.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module5.R), [lab](labs/module5_lab.txt)  | Data I/O + Subset |
-| 2  | 2016-06-16  | Module 6  | [lecSlides](modules/module6.html), [lecNotes](modules/module6.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module6.R), [lab](labs/module6_lab.R), [key](labs/module6_lab_key.R) | Manipulation |
 |---|---|---|---|---|
 | 3  | 2016-06-17  | Homework 3  | [HW](hw/homework3.R) | Homework |
 | 3  | 2016-06-17  | Module 7  | [lecSlides](modules/module7.html), [lecNotes](modules/module7.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module7.R), [lab](labs/module7_lab.R), [key](labs/module7_lab_key.R)  | Summarization |
@@ -171,7 +189,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-04 20:34:44 Eastern Time.</p>
+<p>This page was last updated on 2016-01-04 21:05:24 Eastern Time.</p>
 </div>
 </div>
 
