--- a/Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html
+++ b/Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html
@@ -262,17 +262,6 @@ head(df)</pre>
 
 <pre class = 'prettyprint lang-r'>library(dplyr)</pre>
 
-<pre >
-Attaching package: &#39;dplyr&#39;
-
-The following objects are masked from &#39;package:stats&#39;:
-
-    filter, lag
-
-The following objects are masked from &#39;package:base&#39;:
-
-    intersect, setdiff, setequal, union</pre>
-
 <p>Note, when loading <code>dplyr</code>, it says objects can be &quot;masked&quot;. That means if you use a function defined in 2 places, it uses the one that is loaded in <strong>last</strong>.</p>
 
 </article></slide><slide class=''><hgroup><h2>Renaming Columns of a <code>data.frame</code>: dplyr</h2></hgroup><article  id="renaming-columns-of-a-data.frame-dplyr-1">
@@ -303,7 +292,7 @@ The following objects are masked from &#39;package:base&#39;:
 
 <p>To rename columns in <code>dplyr</code>, you use the <code>rename</code> command</p>
 
-<pre class = 'prettyprint lang-r'>df = rename(df, X = x2)
+<pre class = 'prettyprint lang-r'>df = dplyr::rename(df, X = x2)
 head(df)</pre>
 
 <pre >   x  X          y  z
@@ -313,7 +302,7 @@ head(df)</pre>
 4 10 13  0.4832675 10
 5 10 13  0.1523950  5</pre>
 
-<pre class = 'prettyprint lang-r'>df = rename(df, x2 = X) # reset</pre>
+<pre class = 'prettyprint lang-r'>df = dplyr::rename(df, x2 = X) # reset</pre>
 
 </article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Subsetting Columns</h2></hgroup><article  id="subsetting-columns">
 
