--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ img {
 <td align="left">2</td>
 <td align="left">2016-01-05</td>
 <td align="left">Module 5</td>
-<td align="left"><a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html">HTML</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf">PDF</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R%20_Lab.R">Lab</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R">Code</a></td>
+<td align="left"><a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html">HTML</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf">PDF</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab.R">Lab</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R">Code</a></td>
 <td align="left">Subsetting Data</td>
 </tr>
 <tr class="even">
@@ -189,7 +189,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-04 21:05:24 Eastern Time.</p>
+<p>This page was last updated on 2016-01-05 10:21:24 Eastern Time.</p>
 </div>
 </div>
 
