--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@ img {
 <td align="left">1</td>
 <td align="left">2016-01-04</td>
 <td align="left">Module 3</td>
-<td align="left"><a href="Basic_R/lecture/Basic_R.html">HTML</a>, <a href="Basic_R/lecture/Basic_R.pdf">PDF</a>, <a href="Basic_R/lab/Basic_R_Lab.R">Lab</a>, <a href="Basic_R/lecture/Basic_R.R">Code</a></td>
+<td align="left"><a href="Basic_R/lecture/Basic_R.html">HTML</a>, <a href="Basic_R/lecture/Basic_R.pdf">PDF</a>, <a href="Basic_R/lecture/Basic_R.R">Code</a>, <a href="Basic_R/lab/Basic_R_Lab.R">Lab</a>, <a href="Basic_R/lab/Basic_R_Lab_Key.R">Key</a></td>
 <td align="left">Basic R</td>
 </tr>
 <tr class="odd">
 <td align="left">1</td>
 <td align="left">2016-01-04</td>
 <td align="left">Module 4</td>
-<td align="left"><a href="Data_IO/lecture/Data_IO.html">HTML</a>, <a href="Data_IO/lecture/Data_IO.pdf">PDF</a>, <a href="Data_IO/lab/Data_IO_Lab.R">Lab</a>, <a href="Data_IO/lecture/Data_IO.R">Code</a></td>
+<td align="left"><a href="Data_IO/lecture/Data_IO.html">HTML</a>, <a href="Data_IO/lecture/Data_IO.pdf">PDF</a>, <a href="Data_IO/lecture/Data_IO.R">Code</a>, <a href="Data_IO/lab/Data_IO_Lab.R">Lab</a>, <a href="Data_IO/lab/Data_IO_Lab_Key.R">Key</a></td>
 <td align="left">Data Import/Output</td>
 </tr>
 <tr class="even">
@@ -142,21 +142,21 @@ img {
 <td align="left">2</td>
 <td align="left">2016-01-05</td>
 <td align="left">Module 5</td>
-<td align="left"><a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html">HTML</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf">PDF</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab.R">Lab</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R">Code</a></td>
+<td align="left"><a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html">HTML</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf">PDF</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R">Code</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab.R">Lab</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab_Key.R">Lab</a></td>
 <td align="left">Subsetting Data</td>
 </tr>
 <tr class="even">
 <td align="left">2</td>
 <td align="left">2016-01-05</td>
 <td align="left">Module 6</td>
-<td align="left"><a href="Data_Summarization/lecture/Data_Summarization.html">HTML</a>, <a href="Data_Summarization/lecture/Data_Summarization.pdf">PDF</a>, <a href="Data_Summarization/lab/Data_Summarization_Lab.R">Lab</a>, <a href="Data_Summarization/lecture/Data_Summarization.R">Code</a></td>
+<td align="left"><a href="Data_Summarization/lecture/Data_Summarization.html">HTML</a>, <a href="Data_Summarization/lecture/Data_Summarization.pdf">PDF</a>, <a href="Data_Summarization/lecture/Data_Summarization.R">Code</a>, <a href="Data_Summarization/lab/Data_Summarization_Lab.R">Lab</a>, <a href="Data_Summarization/lab/Data_Summarization_Lab_Key.R">Key</a></td>
 <td align="left">Data Summarization</td>
 </tr>
 <tr class="odd">
-<td align="left">2</td>
-<td align="left">2016-01-05</td>
+<td align="left">3</td>
+<td align="left">2016-01-06</td>
 <td align="left">Module 7</td>
-<td align="left"><a href="Knitr/lecture/Knitr.html">HTML</a>, <a href="Knitr/lecture/Knitr.pdf">PDF</a>, <a href="Knitr/lab/illusion.Rmd">Lab</a>, <a href="Knitr/lecture/Knitr.Rmd">Code</a></td>
+<td align="left"><a href="Knitr/lecture/Knitr.html">HTML</a>, <a href="Knitr/lecture/Knitr.pdf">PDF</a>, <a href="Knitr/lecture/Knitr.Rmd">Code</a>, <a href="Knitr/lab/illusion.Rmd">Lab</a></td>
 <td align="left">Reproducible Research</td>
 </tr>
 <tr class="even">
@@ -189,7 +189,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-05 10:32:12 Eastern Time.</p>
+<p>This page was last updated on 2016-01-05 11:43:48 Eastern Time.</p>
 </div>
 </div>
 
