adding .rproj and all the new modules

--- a/Data_IO/lecture/Data_IO.html
+++ b/Data_IO/lecture/Data_IO.html
@@ -223,7 +223,7 @@ read.table( file, # filename
     fill = TRUE, comment.char = &quot;&quot;, ...) 
 read.table(file = file, header = header, sep = sep, quote = quote, 
     dec = dec, fill = fill, comment.char = comment.char, ...)
-&lt;bytecode: 0x1082fb000&gt;
+&lt;bytecode: 0x103148fc0&gt;
 &lt;environment: namespace:utils&gt;</pre>
 
 <p>Note: the <code>...</code> designates extra/optional arguments that can be passed to <code>read.table()</code> if needed</p>
