adding all the new lectures

--- a/Data_Cleaning/lecture/Data_Cleaning.html
+++ b/Data_Cleaning/lecture/Data_Cleaning.html
@@ -563,7 +563,8 @@ head(circ$date)</pre>
 
 <pre class = 'prettyprint lang-r'>head(Indometh) # this is long</pre>
 
-<pre >  Subject time conc
+<pre >Grouped Data: conc ~ time | Subject
+  Subject time conc
 1       1 0.25 1.50
 2       1 0.50 0.94
 3       1 0.75 0.78
