--- a/Data_Classes/lecture/Data_Classes.html
+++ b/Data_Classes/lecture/Data_Classes.html
@@ -152,11 +152,11 @@
 
 <pre class = 'prettyprint lang-r'>class(c(&quot;Andrew&quot;, &quot;Jaffe&quot;))</pre>
 
-<pre >[1] &quot;character&quot;</pre>
+<pre >## [1] &quot;character&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>class(c(1, 4, 7))</pre>
 
-<pre >[1] &quot;numeric&quot;</pre>
+<pre >## [1] &quot;numeric&quot;</pre>
 
 <p>Recall that <code>c()</code> and <code>class()</code> are both functions!</p>
 
@@ -169,11 +169,11 @@
 <pre class = 'prettyprint lang-r'>x = seq(from = 1, to = 5) # seq() is a function
 x</pre>
 
-<pre >[1] 1 2 3 4 5</pre>
+<pre >## [1] 1 2 3 4 5</pre>
 
 <pre class = 'prettyprint lang-r'>class(x)</pre>
 
-<pre >[1] &quot;integer&quot;</pre>
+<pre >## [1] &quot;integer&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>Integer</h2></hgroup><article  id="integer-1">
 
@@ -183,7 +183,7 @@ x</pre>
 
 <pre class = 'prettyprint lang-r'>1:5</pre>
 
-<pre >[1] 1 2 3 4 5</pre>
+<pre >## [1] 1 2 3 4 5</pre>
 
 </article></slide><slide class=''><hgroup><h2>Logical</h2></hgroup><article  id="logical">
 
@@ -192,7 +192,7 @@ x</pre>
 <pre class = 'prettyprint lang-r'>x = c(TRUE, FALSE, TRUE, TRUE, FALSE)
 class(x)</pre>
 
-<pre >[1] &quot;logical&quot;</pre>
+<pre >## [1] &quot;logical&quot;</pre>
 
 <p><code>sum()</code> and <code>mean()</code> work on <code>logical</code> vectors - they return the total and proportion of <code>TRUE</code> elements, respectively.</p>
 
@@ -203,7 +203,7 @@ class(x)</pre>
 <pre class = 'prettyprint lang-r'>z = c(&quot;TRUE&quot;, &quot;FALSE&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)
 class(z)</pre>
 
-<pre >[1] &quot;character&quot;</pre>
+<pre >## [1] &quot;character&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>Factor</h2></hgroup><article  id="factor">
 
@@ -212,12 +212,12 @@ class(z)</pre>
 <pre class = 'prettyprint lang-r'>x = factor(c(&quot;boy&quot;, &quot;girl&quot;, &quot;girl&quot;, &quot;boy&quot;, &quot;girl&quot;))
 x </pre>
 
-<pre >[1] boy  girl girl boy  girl
-Levels: boy girl</pre>
+<pre >## [1] boy  girl girl boy  girl
+## Levels: boy girl</pre>
 
 <pre class = 'prettyprint lang-r'>class(x)</pre>
 
-<pre >[1] &quot;factor&quot;</pre>
+<pre >## [1] &quot;factor&quot;</pre>
 
 <p>Note that levels are, by default, alphabetical or alphanumerical order.</p>
 
@@ -240,14 +240,14 @@ Levels: boy girl</pre>
         &quot;control&quot;,&quot;control&quot;,&quot;control&quot;))
 cc</pre>
 
-<pre >[1] case    case    case    control control control
-Levels: case control</pre>
+<pre >## [1] case    case    case    control control control
+## Levels: case control</pre>
 
 <pre class = 'prettyprint lang-r'>levels(cc) = c(&quot;control&quot;,&quot;case&quot;)
 cc</pre>
 
-<pre >[1] control control control case    case    case   
-Levels: control case</pre>
+<pre >## [1] control control control case    case    case   
+## Levels: control case</pre>
 
 </article></slide><slide class=''><hgroup><h2>Factors</h2></hgroup><article  id="factors-2">
 
@@ -257,15 +257,15 @@ Levels: control case</pre>
           &quot;control&quot;,&quot;control&quot;), 
         levels =c(&quot;control&quot;,&quot;case&quot;) )</pre>
 
-<pre >[1] case    case    case    control control control
-Levels: control case</pre>
+<pre >## [1] case    case    case    control control control
+## Levels: control case</pre>
 
 <pre class = 'prettyprint lang-r'>factor(c(&quot;case&quot;,&quot;case&quot;,&quot;case&quot;,&quot;control&quot;,
             &quot;control&quot;,&quot;control&quot;), 
         levels =c(&quot;control&quot;,&quot;case&quot;), ordered=TRUE)</pre>
 
-<pre >[1] case    case    case    control control control
-Levels: control &lt; case</pre>
+<pre >## [1] case    case    case    control control control
+## Levels: control &lt; case</pre>
 
 </article></slide><slide class=''><hgroup><h2>Factors</h2></hgroup><article  id="factors-3">
 
@@ -276,11 +276,11 @@ Levels: control &lt; case</pre>
         levels =c(&quot;control&quot;,&quot;case&quot;) )
 as.character(x)</pre>
 
-<pre >[1] &quot;case&quot;    &quot;case&quot;    &quot;case&quot;    &quot;control&quot; &quot;control&quot; &quot;control&quot;</pre>
+<pre >## [1] &quot;case&quot;    &quot;case&quot;    &quot;case&quot;    &quot;control&quot; &quot;control&quot; &quot;control&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>as.numeric(x)</pre>
 
-<pre >[1] 2 2 2 1 1 1</pre>
+<pre >## [1] 2 2 2 1 1 1</pre>
 
 </article></slide><slide class=''><hgroup><h2>Creating categorical variables</h2></hgroup><article  id="creating-categorical-variables">
 
@@ -289,16 +289,16 @@ as.character(x)</pre>
 <pre class = 'prettyprint lang-r'>bg = rep(c(&quot;boy&quot;,&quot;girl&quot;),each=50)
 head(bg)</pre>
 
-<pre >[1] &quot;boy&quot; &quot;boy&quot; &quot;boy&quot; &quot;boy&quot; &quot;boy&quot; &quot;boy&quot;</pre>
+<pre >## [1] &quot;boy&quot; &quot;boy&quot; &quot;boy&quot; &quot;boy&quot; &quot;boy&quot; &quot;boy&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>bg2 = rep(c(&quot;boy&quot;,&quot;girl&quot;),times=50)
 head(bg2)</pre>
 
-<pre >[1] &quot;boy&quot;  &quot;girl&quot; &quot;boy&quot;  &quot;girl&quot; &quot;boy&quot;  &quot;girl&quot;</pre>
+<pre >## [1] &quot;boy&quot;  &quot;girl&quot; &quot;boy&quot;  &quot;girl&quot; &quot;boy&quot;  &quot;girl&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>length(bg)==length(bg2)</pre>
 
-<pre >[1] TRUE</pre>
+<pre >## [1] TRUE</pre>
 
 </article></slide><slide class=''><hgroup><h2>Creating categorical variables</h2></hgroup><article  id="creating-categorical-variables-1">
 
@@ -329,13 +329,13 @@ head(bg2)</pre>
 <pre class = 'prettyprint lang-r'>hi_rider = ifelse(circ$daily &gt; 10000, 1, 0)
 head(hi_rider)</pre>
 
-<pre >[1] 0 0 0 0 0 0</pre>
+<pre >## [1] 0 0 0 0 0 0</pre>
 
 <pre class = 'prettyprint lang-r'>table(hi_rider)</pre>
 
-<pre >hi_rider
-  0   1 
-740 282 </pre>
+<pre >## hi_rider
+##   0   1 
+## 740 282</pre>
 
 </article></slide><slide class=''><hgroup><h2>Creating categorical variables</h2></hgroup><article  id="creating-categorical-variables-3">
 
@@ -346,13 +346,13 @@ head(hi_rider)</pre>
                   &quot;high&quot;, &quot;med&quot;))
 head(riderLevels)</pre>
 
-<pre >[1] &quot;low&quot; &quot;low&quot; &quot;low&quot; &quot;low&quot; &quot;low&quot; &quot;low&quot;</pre>
+<pre >## [1] &quot;low&quot; &quot;low&quot; &quot;low&quot; &quot;low&quot; &quot;low&quot; &quot;low&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>table(riderLevels)</pre>
 
-<pre >riderLevels
-high  low  med 
-   2  740  280 </pre>
+<pre >## riderLevels
+## high  low  med 
+##    2  740  280</pre>
 
 </article></slide><slide class=''><hgroup><h2>Creating categorical variables</h2></hgroup><article  id="creating-categorical-variables-4">
 
@@ -380,46 +380,46 @@ high  low  med
 cx = cut(x, breaks=c(0,10,25,50,100))
 head(cx)  </pre>
 
-<pre >[1] (0,10] (0,10] (0,10] (0,10] (0,10] (0,10]
-Levels: (0,10] (10,25] (25,50] (50,100]</pre>
+<pre >## [1] (0,10] (0,10] (0,10] (0,10] (0,10] (0,10]
+## Levels: (0,10] (10,25] (25,50] (50,100]</pre>
 
 <pre class = 'prettyprint lang-r'>table(cx)</pre>
 
-<pre >cx
-  (0,10]  (10,25]  (25,50] (50,100] 
-      10       15       25       50 </pre>
+<pre >## cx
+##   (0,10]  (10,25]  (25,50] (50,100] 
+##       10       15       25       50</pre>
 
 <p>We can also leave off the labels</p>
 
 <pre class = 'prettyprint lang-r'>cx = cut(x, breaks=c(0,10,25,50,100), labels=FALSE)
 head(cx)  </pre>
 
-<pre >[1] 1 1 1 1 1 1</pre>
+<pre >## [1] 1 1 1 1 1 1</pre>
 
 <pre class = 'prettyprint lang-r'>table(cx)</pre>
 
-<pre >cx
- 1  2  3  4 
-10 15 25 50 </pre>
+<pre >## cx
+##  1  2  3  4 
+## 10 15 25 50</pre>
 
 <p>Note that you have to specify the endpoints of the data, otherwise some of the categories will not be created</p>
 
 <pre class = 'prettyprint lang-r'>cx = cut(x, breaks=c(10,25,50), labels=FALSE)
 head(cx)  </pre>
 
-<pre >[1] NA NA NA NA NA NA</pre>
+<pre >## [1] NA NA NA NA NA NA</pre>
 
 <pre class = 'prettyprint lang-r'>table(cx)</pre>
 
-<pre >cx
- 1  2 
-15 25 </pre>
+<pre >## cx
+##  1  2 
+## 15 25</pre>
 
 <pre class = 'prettyprint lang-r'>table(cx,useNA=&quot;ifany&quot;)</pre>
 
-<pre >cx
-   1    2 &lt;NA&gt; 
-  15   25   60 </pre>
+<pre >## cx
+##    1    2 &lt;NA&gt; 
+##   15   25   60</pre>
 
 </article></slide><slide class=''><hgroup><h2>Vector functions</h2></hgroup><article  id="vector-functions">
 
@@ -447,15 +447,15 @@ head(cx)  </pre>
 <pre class = 'prettyprint lang-r'>z = 1:100 # recall a sequence from 1 to 100
 head(z)</pre>
 
-<pre >[1] 1 2 3 4 5 6</pre>
+<pre >## [1] 1 2 3 4 5 6</pre>
 
 <pre class = 'prettyprint lang-r'>tail(z)</pre>
 
-<pre >[1]  95  96  97  98  99 100</pre>
+<pre >## [1]  95  96  97  98  99 100</pre>
 
 <pre class = 'prettyprint lang-r'>str(z)</pre>
 
-<pre > int [1:100] 1 2 3 4 5 6 7 8 9 10 ...</pre>
+<pre >##  int [1:100] 1 2 3 4 5 6 7 8 9 10 ...</pre>
 
 <p>These functions show a brief snapshot of the data which is useful for exploratory data analysis.</p>
 
@@ -468,17 +468,17 @@ head(z)</pre>
 <pre class = 'prettyprint lang-r'>x = c(&quot;boy&quot;, &quot;girl&quot;, &quot;girl&quot;, &quot;boy&quot;, &quot;girl&quot;)
 table(x)</pre>
 
-<pre >x
- boy girl 
-   2    3 </pre>
+<pre >## x
+##  boy girl 
+##    2    3</pre>
 
 <pre class = 'prettyprint lang-r'>y = c(1, 2, 1, 2, 1)
 table(x,y)</pre>
 
-<pre >      y
-x      1 2
-  boy  1 1
-  girl 2 1</pre>
+<pre >##       y
+## x      1 2
+##   boy  1 1
+##   girl 2 1</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Subsetting</h2></hgroup><article  id="data-subsetting">
 
@@ -487,25 +487,25 @@ x      1 2
 <pre class = 'prettyprint lang-r'>x1 = 10:20
 x1</pre>
 
-<pre > [1] 10 11 12 13 14 15 16 17 18 19 20</pre>
+<pre >##  [1] 10 11 12 13 14 15 16 17 18 19 20</pre>
 
 <pre class = 'prettyprint lang-r'>length(x1)</pre>
 
-<pre >[1] 11</pre>
+<pre >## [1] 11</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Subsetting</h2></hgroup><article  id="data-subsetting-1">
 
 <pre class = 'prettyprint lang-r'>x1[1] # selecting first element</pre>
 
-<pre >[1] 10</pre>
+<pre >## [1] 10</pre>
 
 <pre class = 'prettyprint lang-r'>x1[3:4] # selecting third and fourth elements</pre>
 
-<pre >[1] 12 13</pre>
+<pre >## [1] 12 13</pre>
 
 <pre class = 'prettyprint lang-r'>x1[c(1, 5, 7)] # first, fifth, and seventh elements</pre>
 
-<pre >[1] 10 14 16</pre>
+<pre >## [1] 10 14 16</pre>
 
 <h4><strong>This is probably the most powerful and useful function in R. If you master this, you can literally do anything with R. Everything in the &#39;data analysis pipeline&#39; revolves around subsetting (as you will soon see)</strong></h4>
 
@@ -514,15 +514,15 @@ x1</pre>
 <pre class = 'prettyprint lang-r'>n = 1:9 # sequence from first number to second number incrementing by 1
 n</pre>
 
-<pre >[1] 1 2 3 4 5 6 7 8 9</pre>
+<pre >## [1] 1 2 3 4 5 6 7 8 9</pre>
 
 <pre class = 'prettyprint lang-r'>mat = matrix(n, nrow = 3)
 mat</pre>
 
-<pre >     [,1] [,2] [,3]
-[1,]    1    4    7
-[2,]    2    5    8
-[3,]    3    6    9</pre>
+<pre >##      [,1] [,2] [,3]
+## [1,]    1    4    7
+## [2,]    2    5    8
+## [3,]    3    6    9</pre>
 
 </article></slide><slide class=''><hgroup><h2>Matrix (and Data frame) Functions</h2></hgroup><article  id="matrix-and-data-frame-functions">
 
@@ -541,15 +541,15 @@ mat</pre>
 
 <pre class = 'prettyprint lang-r'>mat[1, 1] # individual entry: row 1, column 1</pre>
 
-<pre >[1] 1</pre>
+<pre >## [1] 1</pre>
 
 <pre class = 'prettyprint lang-r'>mat[1, ] # first row</pre>
 
-<pre >[1] 1 4 7</pre>
+<pre >## [1] 1 4 7</pre>
 
 <pre class = 'prettyprint lang-r'>mat[, 1] # first columns</pre>
 
-<pre >[1] 1 2 3</pre>
+<pre >## [1] 1 2 3</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Selection</h2></hgroup><article  id="data-selection-1">
 
@@ -557,11 +557,11 @@ mat</pre>
 
 <pre class = 'prettyprint lang-r'>class(mat[1, ])</pre>
 
-<pre >[1] &quot;integer&quot;</pre>
+<pre >## [1] &quot;integer&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>class(mat[, 1])</pre>
 
-<pre >[1] &quot;integer&quot;</pre>
+<pre >## [1] &quot;integer&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Frames</h2></hgroup><article  id="data-frames">
 
@@ -576,24 +576,24 @@ mat</pre>
 <pre class = 'prettyprint lang-r'>data(iris) ## just use some data in R already
 names(iris) ## get the column names</pre>
 
-<pre >[1] &quot;Sepal.Length&quot; &quot;Sepal.Width&quot;  &quot;Petal.Length&quot; &quot;Petal.Width&quot; 
-[5] &quot;Species&quot;     </pre>
+<pre >## [1] &quot;Sepal.Length&quot; &quot;Sepal.Width&quot;  &quot;Petal.Length&quot; &quot;Petal.Width&quot; 
+## [5] &quot;Species&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>str(iris) # easy snapshot of data, like `describe` in Stata</pre>
 
-<pre >&#39;data.frame&#39;:   150 obs. of  5 variables:
- $ Sepal.Length: num  5.1 4.9 4.7 4.6 5 5.4 4.6 5 4.4 4.9 ...
- $ Sepal.Width : num  3.5 3 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 ...
- $ Petal.Length: num  1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 1.5 ...
- $ Petal.Width : num  0.2 0.2 0.2 0.2 0.2 0.4 0.3 0.2 0.2 0.1 ...
- $ Species     : Factor w/ 3 levels &quot;setosa&quot;,&quot;versicolor&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...</pre>
+<pre >## &#39;data.frame&#39;:    150 obs. of  5 variables:
+##  $ Sepal.Length: num  5.1 4.9 4.7 4.6 5 5.4 4.6 5 4.4 4.9 ...
+##  $ Sepal.Width : num  3.5 3 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 ...
+##  $ Petal.Length: num  1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 1.5 ...
+##  $ Petal.Width : num  0.2 0.2 0.2 0.2 0.2 0.4 0.3 0.2 0.2 0.1 ...
+##  $ Species     : Factor w/ 3 levels &quot;setosa&quot;,&quot;versicolor&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...</pre>
 
 <pre class = 'prettyprint lang-r'>head(iris, 3) # get top 3 rows</pre>
 
-<pre >  Sepal.Length Sepal.Width Petal.Length Petal.Width Species
-1          5.1         3.5          1.4         0.2  setosa
-2          4.9         3.0          1.4         0.2  setosa
-3          4.7         3.2          1.3         0.2  setosa</pre>
+<pre >##   Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+## 1          5.1         3.5          1.4         0.2  setosa
+## 2          4.9         3.0          1.4         0.2  setosa
+## 3          4.7         3.2          1.3         0.2  setosa</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Selection</h2></hgroup><article  id="data-selection-2">
 
@@ -601,11 +601,11 @@ names(iris) ## get the column names</pre>
 
 <pre class = 'prettyprint lang-r'>head(iris$Petal.Length)</pre>
 
-<pre >[1] 1.4 1.4 1.3 1.5 1.4 1.7</pre>
+<pre >## [1] 1.4 1.4 1.3 1.5 1.4 1.7</pre>
 
 <pre class = 'prettyprint lang-r'>class(iris$Petal.Width)</pre>
 
-<pre >[1] &quot;numeric&quot;</pre>
+<pre >## [1] &quot;numeric&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Selection</h2></hgroup><article  id="data-selection-3">
 
@@ -613,16 +613,16 @@ names(iris) ## get the column names</pre>
 
 <pre class = 'prettyprint lang-r'>head(iris[, 2])</pre>
 
-<pre >[1] 3.5 3.0 3.2 3.1 3.6 3.9</pre>
+<pre >## [1] 3.5 3.0 3.2 3.1 3.6 3.9</pre>
 
 <p>You can also use the bracket notation, but specify the name(s) in quotes if you want more than 1 column. This allows you to subset rows and columns at the same time</p>
 
 <pre class = 'prettyprint lang-r'>iris[1:3, c(&quot;Sepal.Width&quot;, &quot;Species&quot;)]</pre>
 
-<pre >  Sepal.Width Species
-1         3.5  setosa
-2         3.0  setosa
-3         3.2  setosa</pre>
+<pre >##   Sepal.Width Species
+## 1         3.5  setosa
+## 2         3.0  setosa
+## 3         3.2  setosa</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Frames</h2></hgroup><article  id="data-frames-2">
 
@@ -633,10 +633,10 @@ y = 1:3
 df = data.frame(name = x, id = y)
 df</pre>
 
-<pre >      name id
-1   Andrew  1
-2 Leonardo  2
-3    Shaun  3</pre>
+<pre >##       name id
+## 1   Andrew  1
+## 2 Leonardo  2
+## 3    Shaun  3</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Frames</h2></hgroup><article  id="data-frames-3" class="smaller">
 
@@ -646,18 +646,18 @@ df</pre>
 iris2$Index = 1:nrow(iris2)
 head(iris2)</pre>
 
-<pre >  Sepal.Length Sepal.Width Petal.Length Petal.Width Species Index
-1          5.1         3.5          1.4         0.2  setosa     1
-2          4.9         3.0          1.4         0.2  setosa     2
-3          4.7         3.2          1.3         0.2  setosa     3
-4          4.6         3.1          1.5         0.2  setosa     4
-5          5.0         3.6          1.4         0.2  setosa     5
-6          5.4         3.9          1.7         0.4  setosa     6</pre>
+<pre >##   Sepal.Length Sepal.Width Petal.Length Petal.Width Species Index
+## 1          5.1         3.5          1.4         0.2  setosa     1
+## 2          4.9         3.0          1.4         0.2  setosa     2
+## 3          4.7         3.2          1.3         0.2  setosa     3
+## 4          4.6         3.1          1.5         0.2  setosa     4
+## 5          5.0         3.6          1.4         0.2  setosa     5
+## 6          5.4         3.9          1.7         0.4  setosa     6</pre>
 
 <pre class = 'prettyprint lang-r'>names(iris2)</pre>
 
-<pre >[1] &quot;Sepal.Length&quot; &quot;Sepal.Width&quot;  &quot;Petal.Length&quot; &quot;Petal.Width&quot; 
-[5] &quot;Species&quot;      &quot;Index&quot;       </pre>
+<pre >## [1] &quot;Sepal.Length&quot; &quot;Sepal.Width&quot;  &quot;Petal.Length&quot; &quot;Petal.Width&quot; 
+## [5] &quot;Species&quot;      &quot;Index&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Classes: Extended</h2></hgroup><article  id="data-classes-extended">
 
